--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,26 +30,27 @@ services:
     restart: unless-stopped
 
   mongodb:
-    container_name: ms_mongo_db
     image: mongo
+    container_name: mongo_db
     ports:
       - 27017:27017
     volumes:
       - mongo:/data
     environment:
       - MONGO_INITDB_ROOT_USERNAME=nqtrang
-      - MONGO_INITDB_ROOT_PASSWORD=uit
+      - MONGO_INITDB_ROOT_PASSWORD=nqtrang
 
   mongo-express:
-    container_name: ms_mongo_express
     image: mongo-express
+    container_name: mongo_express
     restart: unless-stopped
     ports:
       - 8081:8081
     environment:
       - ME_CONFIG_MONGODB_ADMINUSERNAME=nqtrang
-      - ME_CONFIG_MONGODB_ADMINUPASSWORD=uit
+      - ME_CONFIG_MONGODB_ADMINPASSWORD=nqtrang
       - ME_CONFIG_MONGODB_SERVER=mongodb
+      - ME_CONFIG_BASICAUTH=false
 
   mail-dev:
     container_name: ms_mail_dev
